; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_sriov.c_ecore_iov_get_vf_ctx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_sriov.c_ecore_iov_get_vf_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { i32 }
%struct.ecore_vf_info = type { i8* }

@OSAL_NULL = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ecore_iov_get_vf_ctx(%struct.ecore_hwfn* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.ecore_hwfn*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ecore_vf_info*, align 8
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.ecore_vf_info* @ecore_iov_get_vf_info(%struct.ecore_hwfn* %7, i32 %8, i32 1)
  store %struct.ecore_vf_info* %9, %struct.ecore_vf_info** %6, align 8
  %10 = load %struct.ecore_vf_info*, %struct.ecore_vf_info** %6, align 8
  %11 = icmp ne %struct.ecore_vf_info* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %2
  %13 = load i8*, i8** @OSAL_NULL, align 8
  store i8* %13, i8** %3, align 8
  br label %18

14:                                               ; preds = %2
  %15 = load %struct.ecore_vf_info*, %struct.ecore_vf_info** %6, align 8
  %16 = getelementptr inbounds %struct.ecore_vf_info, %struct.ecore_vf_info* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  store i8* %17, i8** %3, align 8
  br label %18

18:                                               ; preds = %14, %12
  %19 = load i8*, i8** %3, align 8
  ret i8* %19
}

declare dso_local %struct.ecore_vf_info* @ecore_iov_get_vf_info(%struct.ecore_hwfn*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
